@@ -3,29 +3,28 @@ package competition.subsystems.drive.commands;
 import competition.electrical_contract.ElectricalContract;
 import competition.subsystems.drive.DriveSubsystem;
 import competition.subsystems.pose.Landmarks;
+import competition.subsystems.pose.Landmarks.ReefFace;
 import competition.subsystems.pose.PoseSubsystem;
 import competition.subsystems.vision.CoprocessorCommunicationSubsystem;
 import competition.subsystems.drive.commands.DriveToBezierCurvesWithVisionCommand;
 import edu.wpi.first.apriltag.AprilTagFieldLayout;
-import edu.wpi.first.units.Units;
 import edu.wpi.first.math.geometry.Pose2d;
-import edu.wpi.first.math.geometry.Transform2d;
-import edu.wpi.first.math.geometry.Translation2d;
 import edu.wpi.first.wpilibj.DriverStation;
 import xbot.common.logging.RobotAssertionManager;
 import xbot.common.properties.PropertyFactory;
 import xbot.common.subsystems.drive.control_logic.HeadingModule;
 
 import javax.inject.Inject;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-public class DriveToCoralStationWithVisionCommand extends DriveToBezierCurvesWithVisionCommand {
+public class DriveToClosestReefSectionWithVisionCommand extends DriveToBezierCurvesWithVisionCommand {
     private final AprilTagFieldLayout aprilTagFieldLayout;
 
     @Inject
-    DriveToCoralStationWithVisionCommand(PoseSubsystem pose, DriveSubsystem drive,
+    DriveToClosestReefSectionWithVisionCommand(PoseSubsystem pose, DriveSubsystem drive,
             CoprocessorCommunicationSubsystem coprocessorComms,
             PropertyFactory pf, HeadingModule.HeadingModuleFactory headingModuleFactory,
             RobotAssertionManager assertionManager, ElectricalContract electricalContract,
@@ -34,33 +33,31 @@ public class DriveToCoralStationWithVisionCommand extends DriveToBezierCurvesWit
         this.aprilTagFieldLayout = aprilTagFieldLayout;
     }
 
-    private Pose2d getCoralStationPose() {
+    private Pose2d getClosestReefPose() {
         var alliance = DriverStation.getAlliance().orElse(DriverStation.Alliance.Blue);
         this.log.info("Alliance: {}", alliance);
-        var coralStations = Landmarks.getAllianceCoralStationFiducialIds(alliance);
-        this.log.info("coral ids: {}", coralStations);
-        List<Pose2d> stationPoses = coralStations.stream()
+        var reefSections = Landmarks.getAllianceReefFiducialIds(alliance);
+        this.log.info("reef sections: {}", reefSections);
+        List<Pose2d> reefPoses = reefSections.stream()
                 .map(stationFiducialId -> this.aprilTagFieldLayout.getTagPose(stationFiducialId))
                 .filter(pose -> pose.isPresent())
                 .flatMap(Optional::stream)
                 .map(pose -> pose.toPose2d())
                 .collect(Collectors.toList());
 
-        if (stationPoses.size() == 0) {
-            stationPoses = List.of(
-                    Landmarks.getCoralStationSectionPose(Landmarks.CoralStation.LEFT,
-                            Landmarks.CoralStationSection.MID),
-                    Landmarks.getCoralStationSectionPose(Landmarks.CoralStation.RIGHT,
-                            Landmarks.CoralStationSection.MID));
+        if (reefPoses.size() == 0) {
+            reefPoses = Arrays.asList(ReefFace.values()).stream()
+                .map(reefFace -> Landmarks.getReefFacePose(reefFace))
+                .collect(Collectors.toList());
         }
 
         var robotPose = this.pose.getCurrentPose2d();
-        return robotPose.nearest(stationPoses);
+        return robotPose.nearest(reefPoses);
     }
 
     @Override
     public void initialize() {
-        if (this.setDestinationPoseForVision(this.getCoralStationPose(), true)) {
+        if (this.setDestinationPoseForVision(this.getClosestReefPose(), false)) {
             super.initialize();
         }
     }
